# BiasCorrectionDL

./: .gitignore  README.md  cmip6_cmip6_baselines.py  cmip6_cmip6_dl.py  cmip6_era5_baselines.py  cmip6_era5_dl.py  cmip_era5_dl.py  cmip_era_baselines.py  cmip_era_dl.py  demo-corrector.ipynb  drun.sh  era5_eobs_baselines.py  era5_eobs_dl.py  era5_era5_baselines.py  era5_era5_diffusion.py  era5_era5_dl.py  era5_era5_gan.py  gpu-info.sh  plots.py  preprocess.py  run.py  save_metrics.py  slurm_run.sh  test.py  train.py  utils_corrector.py
configs/: bias_correction.yaml  cmip5_TestNet.yaml  cmip6_Baseline.yaml  cmip6_GhostWindNet27.yaml
configs/eval/: GhostWindNet_temp.yaml  GhostWindNet_wind.yaml  test_GhostWindNet_temp.yaml  test_WindNet27x47.yaml  test_baseline.yaml
configs/inference/: cmip6-cmip6.yaml  era5-era5.yaml  era5_era5.yaml
configs/load/: cmip.yml  era.yaml
configs/process/: cmip5_dataset.yaml  cmip6_dataset.yaml  cmip6_dataset_temp.yaml  cmip6_dataset_wind.yaml
configs/raw/: cmip5_paths.yaml  cmip6_1deg_paths.yaml  cmip6_elevation_paths.yaml
configs/train/: cmip6-cmip6.yaml  cmip6-era5-3h.yaml  cmip6-era5-d.yaml  cmip6-era5.yaml  era5-eobs.yaml  era5-era5-diffusion.yaml  era5-era5.yaml  era5-era5_gan.yaml  train_cmip5_test_run.yaml  train_cmip6_pr.yaml  train_cmip6_temp.yaml  train_cmip6_wind.yaml
configs/unit_test_configs/: dummy_data_leap.yaml
configs/visual/: eobs_cmip.yaml
environments/: build  drun.sh  pyproject.toml
environments/conda/: Dockerfile  build  drun.sh  environment.yml
environments/poetry/: Dockerfile  build  drun.sh  pyproject.toml
environments/pytorch1.13.1_cuda116/: Dockerfile  requirements.txt
environments/pytorch2.0.1_cuda117/: Dockerfile  Singularity  requirements.txt  requirements_nv.txt
environments/singularity/: environment.yml
experiments/downscaling/: era5_era5_baselines.py  era5_era5_deep_learning.py
notebooks/: PicsGCM.ipynb  climate_learn_Quickstart.ipynb  climate_learn_Quickstart_downscaling.ipynb  cmip6_cmip6_baselines.ipynb  ebos.ipynb  era5-eobs_baselines.ipynb  models_sizes_cmip6-era5.ipynb  models_sizes_era5-era5.ipynb  process_raw.ipynb  test_gan.ipynb  test_resnet.ipynb  test_samvit.ipynb  test_unet copy.ipynb  test_unet.ipynb  test_vit.ipynb  test_ynet.ipynb  visualize_model_downscaling.ipynb  visualize_model_downscaling.py  visualize_model_downscaling_cmip6-era5.ipynb  visualize_model_downscaling_era5-era5.ipynb
src/climate_learn/: __init__.py
src/data_assemble/: assemble_target.py  prepare_cmip.py  prepare_era5.py
src/data_load/: .cdsapirc  README.md  constants_regrid.py  load_cmip.py  load_era.py
src/regression/: data_load.py  eval.py  (+4 more)
test/: dummy_data.py  test_climate_padding.py  test_dataload.py  test_prepapre_cmip5.py  test_target.py
(+43 files in other folders)
