[tool.poetry]
name = "draft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "2.1.0"
xarray = "^2024.1.1"
timm = "^0.9.12"
polars = "^0.20.8"
wandb = "^0.16.3"
numba = "^0.59.0"
ipykernel = "^6.29.2"
jupyter = "^1.0.0"
dask = "^2024.2.0"
pyarrow = "^15.0.0"
omegaconf = "^2.3.0"
zarr = "^2.16.1"
scipy = "^1.12.0"
geopandas = "^0.14.3"
fiona = "^1.9.5"
geopy = "^2.4.1"
debugpy = "^1.8.1"
matplotlib = "^3.8.2"
fastparquet = "^2024.2.0"
swifter = "^1.4.0"
scikit-learn = "^1.4.0"
netcdf4 = "^1.6.5"
hydra-core = "^1.3.2"
flake8 = "^7.0.0"
ipywidgets = "^8.0.4"
ipyleaflet = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"