[tool.poetry]
name = "bias_correction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.2.0"
pytorch-lightning = "^2.2.1"
wandb = "^0.16.4"
numba = "^0.59.0"
ipykernel = "^6.29.3"
jupyter = "^1.0.0"
dask = "^2024.3.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
xesmf = "^0.8.4"
climate-learn = "^1.0.0"
zarr = "^2.17.1"
geopandas = "^0.14.3"
fiona = "^1.9.6"
geopy = "^2.4.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
flake8 = "^7.0.0"
ipywidgets = "^8.1.2"
netcdf4 = "^1.6.5"
tqdm = "^4.66.2"
rasterio = "^1.3.9"
polars = "^0.20.15"
swifter = "^1.4.0"
pyarrow = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"