[tool.poetry]
name = "bias-correction"
version = "0.1.0"
description = ""
authors = ["Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
xarray = "^2024.2.0"
pytorch-lightning = "^2.2.1"
wandb = "^0.16.4"
numba = "^0.59.1"
dask = "^2024.3.1"
xesmf = "^0.8.4"
climate-learn = "^1.0.0"
zarr = "^2.17.1"
geopandas = "^0.14.3"
fiona = "^1.9.6"
geopy = "^2.4.1"
netcdf4 = "^1.6.5"
rasterio = "^1.3.9"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
flake8 = "^7.0.0"
ipywidgets = "^8.1.2"
polars = "^0.20.16"
swifter = "^1.4.0"
pyarrow = "^15.0.2"
gcsfs = "^2024.3.1"
esgf-pyclient = "^0.3.1"
optuna = "^3.6.0"
cartopy = "^0.22.0"
catboost = "^1.2.3"
opencv-python = "^4.9.0.80"
transformers = "^4.38.2"
fastparquet = "^2024.2.0"
torchdata = "^0.7.1"
ipykernel = "^6.29.3"
diffusers = "^0.27.2"
rioxarray = "^0.15.1"
ipyleaflet = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
